--- a/src/components/AnimatedList/styles.module.css
+++ b/src/components/AnimatedList/styles.module.css
@@ -1,5 +1,9 @@
 .list-wrapper {
   width: 210px;
+  background: white;
+  font-family: Helvetica;
+  padding: 4rem 0;
+  font-size: 0.875rem;
 }
 
 .list-item {
@@ -11,11 +15,11 @@
 
 .list__icon {
   margin-right: 1rem;
-  transition: 0.3s;
+  transition: margin-right 0.3s;
 }
 
 .list__text {
-  transition: 0.3s;
+  transition: margin-right 0.3s;
   margin-right: auto;
 }
 
